--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,15 @@
   "author": "HexaHunks",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-joi-validation": "^5.0.1",
     "http": "^0.0.1-security",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "supertest": "^7.0.0"
