--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-joi-validation": "^5.0.1",
+    "gridfs-stream": "^1.1.1",
     "http": "^0.0.1-security",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.3",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
