--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,20 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-joi-validation": "^5.0.1",
     "gridfs-stream": "^1.1.1",
     "http": "^0.0.1-security",
-    "joi": "^17.13.1",
+    "joi": "^17.13.3",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "path": "^0.12.7",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
