--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "HexaHunks",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -17,6 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-joi-validation": "^5.0.1",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "http": "^0.0.1-security",
     "joi": "^17.13.3",
