--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.4.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.14",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "qs": "^6.12.1",
