small addition to package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
+    "start": "nodemon server.js",
     "coverage": "jest --coverage"
   },
   "author": "HexaHunks",
