--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.3",
+    "mime-types": "^2.1.35",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.4",
