--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,45 @@
+# # version: '3.8'
+
+# # services:
+# #   swagger:
+# #     build:
+# #       context: ./swagger-doc
+# #       dockerfile: Dockerfile
+# #     ports:
+# #       - '3005:3005'
+# #     volumes:
+# #       - ./swagger:/app
+# #     command: ['node', 'index.js']
+# #   frontend:
+# #     build:
+# #       context: ./frontend
+# #       dockerfile: Dockerfile
+# #     ports:
+# #       - '3000:3000'
+# #     volumes:
+# #       - .:/app
+# version: '3.8'
+
+# services:
+#   swagger:
+#     build:
+#       context: ./swagger-doc
+#       dockerfile: Dockerfile
+#     ports:
+#       - '3005:3005'
+#     volumes:
+#       - ./swagger-doc:/app
+#     command: ['node', 'index.js']
+
+#   frontend:
+#     build:
+#       context: ./frontend
+#       dockerfile: Dockerfile
+#     ports:
+#       - '3000:3000'
+#     # Mount the specific frontend directory if applicable to avoid overriding the /app directory set during build
+#     volumes:
+#       - ./frontend:/app
 version: '3.8'
 
 services:
@@ -8,8 +50,9 @@ services:
     ports:
       - '3005:3005'
     volumes:
-      - ./swagger:/app
+      - ./swagger-doc:/app
     command: ['node', 'index.js']
+
   frontend:
     build:
       context: ./frontend
@@ -17,4 +60,13 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - .:/app
+      - ./frontend:/app
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - '5003:5003'
+    volumes:
+      - ./backend:/app
