--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "coverage": "jest --coverage"
   },
   "author": "HexaHunks",
@@ -36,7 +36,8 @@
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "qs": "^6.12.1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
