--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
     "express-joi-validation": "^5.0.1",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^140.0.1",
     "gridfs-stream": "^1.1.1",
     "http": "^0.0.1-security",
+    "install": "^0.13.0",
     "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
@@ -33,6 +35,7 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.14",
+    "npm": "^10.8.2",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "qs": "^6.12.1",
