--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "cypress": "^13.12.0",
     "dotenv-webpack": "^8.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.3.19",
     "html-react-parser": "^5.1.10",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-burger-menu": "^3.0.9",
@@ -31,6 +33,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
     "universal-cookie": "^7.1.4",
