docker created and working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,32 @@
-# # version: '3.8'
-
-# # services:
-# #   swagger:
-# #     build:
-# #       context: ./swagger-doc
-# #       dockerfile: Dockerfile
-# #     ports:
-# #       - '3005:3005'
-# #     volumes:
-# #       - ./swagger:/app
-# #     command: ['node', 'index.js']
-# #   frontend:
-# #     build:
-# #       context: ./frontend
-# #       dockerfile: Dockerfile
-# #     ports:
-# #       - '3000:3000'
-# #     volumes:
-# #       - .:/app
-# version: '3.8'
-
-# services:
-#   swagger:
-#     build:
-#       context: ./swagger-doc
-#       dockerfile: Dockerfile
-#     ports:
-#       - '3005:3005'
-#     volumes:
-#       - ./swagger-doc:/app
-#     command: ['node', 'index.js']
-
-#   frontend:
-#     build:
-#       context: ./frontend
-#       dockerfile: Dockerfile
-#     ports:
-#       - '3000:3000'
-#     # Mount the specific frontend directory if applicable to avoid overriding the /app directory set during build
-#     volumes:
-#       - ./frontend:/app
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - '3000:3000'
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./frontend:/app
+    networks:
+      - mern-network
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - '5003:5003'
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./backend:/app
+    networks:
+      - mern-network
+
   swagger:
     build:
       context: ./swagger-doc
@@ -53,21 +37,6 @@ services:
       - ./swagger-doc:/app
     command: ['node', 'index.js']
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - '3000:3000'
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - '5003:5003'
-    volumes:
-      - ./backend:/app
+networks:
+  mern-network:
+    driver: bridge
