--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "semver": "^7.6.3",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
     "universal-cookie": "^7.1.4",
