--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,12 @@ services:
 
   swagger:
     build:
-      context: ./swagger-doc
+      context: ./swagger-final
       dockerfile: Dockerfile
     ports:
       - '3005:3005'
     volumes:
-      - ./swagger-doc:/app
+      - ./swagger-final:/app
     command: ['node', 'index.js']
 
 networks:
