--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "lint": "eslint ."
   },
   "author": "HexaHunks",
   "license": "ISC",
@@ -43,7 +44,10 @@
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@types/jest": "^29.5.12",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4"
   }
