--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chai": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.3",
     "mime-types": "^2.1.35",
+    "mocha": "^10.7.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.4",
