--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
-    "chai": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -32,8 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.3",
     "mime-types": "^2.1.35",
-    "mocha": "^10.7.0",
     "mongodb": "^6.7.0",
+    "mongodb-memory-server": "^10.0.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
@@ -42,15 +41,19 @@
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "qs": "^6.12.1",
-    "supertest": "^7.0.0",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/jest": "^29.5.12",
+    "chai": "^5.1.1",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "mocha": "^10.7.0",
+    "node-mocks-http": "^1.15.1",
+    "sinon": "^18.0.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.4"
   }
 }
